        auto-parens mode
  
      - In strings and line/block comments, auto-parens mode
        no longer has any effect (you can still use the M+..
        keybindings to force insertion of a particular brace
        pair)
  
      - Detect when a character constant is being typed, and
        don't insert brace pairs if so
  
  . DrRacket's window can now be substantially narrower

  . DrRacket's paren highlighting uses alpha-blending to avoid having
    the highlight disappear completely when completely inside an
    error.

  . Improved the log message gui

------------------------------
       Version 5.3.1
------------------------------

  . Enable online check syntax by default (it has been
    available in the last two releases, but was disabled by
    default)

  . Check Syntax now shows the blue boxes from the
    documentation in the definitions window

  . Add a spell checker for string constants; use
    <menukey>-shift-c to turn it off or on

  . Change the "Variables" pane of the debugger so that it
    does not do word-wrapping (this avoids some performance
    problems when very large values are rendered there)

  . Adjust the Install .plt File dialog so that it cleans up
    after the end of an installation (specifically, it shuts
    down the custodian that was running the installation
    process), which also causes the Abort button to be
    disabled.

------------------------------
       Version 5.3
------------------------------

  . Added the Optimization Coach (see the 'View' menu)

  . Adjusted Check Syntax so that set!'d variables and 
    contract obligations are now in tooltips

  . DrRacket's toolbar buttons now have numbers associated with them
    to control what order they appear in.

  . Ditto for the View menu items; also, cleaned up the View menu

  . The framework's color:text%'s token-sym->style init argument (also
    the same as the color:text%'s start-colorer method's argument of